[tool.poetry]
name = "smirk"
version = "0.1.0"
description = "An experimental pedestrian emergency breaking ADAS."
authors = ["Kasper Socha <kaspersocha@gmail.com>", "Markus Borg <markus.borg@ri.se>"]
readme= "README.md"
repository="https://github.com/RI-SE/smirk"

[tool.poetry.dependencies]
numpy = "~1.18.0"
omegaconf = "^2.0.5"
Pillow = "^8.1.0"
python = "3.7.9"
tensorflow = "~2.3.0"
tensorflow-hub = "^0.12.0"
pandas = "^1.3.3"
allpairspy = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
data-science-types = "^0.2.22"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
isort = "^5.7.0"
mypy = "^0.790"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
