[tool.poetry]
name = "smirk"
version = "1.0"
description = "An experimental pedestrian emergency breaking ADAS."
authors = ["Kasper Socha <kaspersocha@gmail.com>", "Markus Borg <markus.borg@ri.se>", "Jens Henriksson <jens.henriksson@semcon.com>"]
readme= "README.md"
repository="https://github.com/RI-SE/smirk"
license="GPL-3.0-or-later"

[tool.poetry.dependencies]
numpy = "~1.18.0"
omegaconf = "^2.0.5"
Pillow = "^8.1.0"
python = "3.7.9"
tensorflow = "~2.3.0"
tensorflow-hub = "^0.12.0"
pandas = "^1.3.3"
allpairspy = "^2.5.0"
yolov5 = { path = "./yolov5/", develop = true }
alibi-detect = "^0.8.1"
tensorflow-probability = "0.11.1"
nanoid = "^2.0.0"
psutil = "^5.9.0"
click = "^8.1.3"
pydantic = "^1.9.1"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "3.9.2"
flake8-black = "0.2.4"
flake8-bugbear = "^22.4.25"
isort = "^5.7.0"
mypy = "^0.790"
pre-commit = "^2.10.1"
numpy-stubs = {git = "https://github.com/numpy/numpy-stubs"}
pandas-stubs = "^1.2.0"

[tool.poetry.scripts]
smirk = "smirk.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pyright]
strictParameterNoneValue = false
