[tool.poetry]
name = "pedestrian-detector"
version = "0.1.0"
description = "Training of a simple pedestrian detection model."
authors = ["Kasper Socha <kaspersocha@gmail.com>"]
readme= "README.md"
repository="https://github.com/RI-SE/smirk"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.4.1"
object-detection = {path = "tf-models/research"}
tqdm = "^4.56.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
data-science-types = "^0.2.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
