[tool.poetry]
name = "pedestrian-generator"
version = "0.1.0"
description = "A tool for running data generation scenarios in ESI Pro-SiVIC"
authors = ["Kasper Socha <kaspersocha@gmail.com>"]
readme= "README.md"
repository="https://github.com/updbqn/pedestrian-generator"

[tool.poetry.dependencies]
python = "^3.7"
omegaconf = "^2.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-annotations = "^2.4.1"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
